# coup

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: commands.hxx  config.hxx  coup_err.hxx  coup_file.hxx  coup_filesystem.hxx  coup_json.hxx  coup_logger.hxx  coup_project.hxx  coup_system.hxx  coup_utilities.hxx  dag.hxx  file_tracker.hxx  parser.hxx  project.hxx  regex.hxx  threadsafe_vector.hxx  utility.hxx
source/: .commands.hxx.swp  .config.hxx.swp  .utility.hxx.swp  commands.hxx  compiler.cxx  compiler.hxx  file_tracker.hxx  main.cxx  parser.hxx  regex.hxx  utility.hxx
source/core/: compiler.cxx  compiler.hxx  config.hxx
src/: commands.hxx  coup_file.cxx  coup_filesystem.cxx  coup_json.cxx  coup_logger.cxx  coup_project.cxx  coup_system.cxx  coup_utilities.cxx  dag.cxx  file_tracker.hxx  main.cxx  project.cxx  project.hxx
tests/: filesystem_test.cxx  json_test.cxx  main.cxx  test.cxx  test.hxx  test_commands.cxx  test_config.json  test_file_tracker.cxx  test_parser.cxx  test_regex.cxx  threadsafe_vector_test.cxx
tests/config_examples/: bad_config.json  good_config.json
